# Code--analysis

./: Dockerfile  README.md  __init__.py  app.py  environment.py  graders.py  index.html  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  style.css  tasks.py
static/: style.css
templates/: index.html
