[project]
name = "code-lens"
version = "1.0.0"
description = "AI-powered code analysis environment"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "jinja2",
    "requests",
    "PyYAML",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"